--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Profile Page</title>
-  </head>
+  <link rel="stylesheet" href="style.css">
+  <title>My Profile Page</title>
+</head>
   <body>
     <h1>Hello, I'm Jonathan!</h1>
     <p>I'm learning web development and this is my first website.</p>
