added button with JavaScript

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 
     <h2>Contact Me</h2>
     <a href="https://github.com/JohnoRivas">My GitHub</a>
-  </body>
+  <script src="script.js"></script>
+<button onclick="sayHello()">Click Me!</button>
+</body>
 </html>
